--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,37 @@
 :root {
+  --primary-color-1: #f17932;
+  --primary-color-2: #3263f1;
+  --secondary-color-1: #6CB948;
+  --success-color-1: #2BDE3D;
+  --warning-color-1: #FFD953;
+  --danger-color-1: #FC5555;
+  --black-color-1: #000000;
+  --black-color-2: #3f3e3e;
+  --black-color-3: #474646;
+  --black-color-4: #5B5B5B;
+  --white-color-1: #FFFFFF;
+  --white-color-2: #D9D9D9;
+  --neutral-color-1: #B1C3E4;
+  --trasnparent-color-1: #FFFFFF00;
+
+
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: var(--black-color-1);
+
+  background-color: var(--white-color-1);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
+* {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+  padding: 0;
+  box-sizing: border-box;
 }
