--- a/src/index.css
+++ b/src/index.css
@@ -35,3 +35,11 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+p {
+  font-family: "Jura", sans-serif;
+}
+
+h1, h2, h3, h4, h5 {
+  font-family: "Silkscreen", sans-serif;
+}
