feat: fonts and other things

--- a/src/components/DialogueBox/styles.module.css
+++ b/src/components/DialogueBox/styles.module.css
@@ -9,4 +9,7 @@
   left: 10%;
   font-size: 18px;
   color: #333;
+
+  /* background: url('../../assets/StoryPage/DialogueBox.png') no-repeat center center;
+  background-size: cover; */
 }
