--- a/src/pages/DescriptionPage/styles.module.css
+++ b/src/pages/DescriptionPage/styles.module.css
@@ -12,9 +12,25 @@
   justify-content: center;
   align-items: center;
   text-align: center;
+
+  background: url('../../assets/StoryPage/bg/bg0.png') no-repeat center center;
+  background-size: cover;
 }
 
 .name {
   font-size: 30px;
   color: white;
+
+  background-color: black;
+
+  /* 
+  -webkit-text-stroke-color: black;
+  -webkit-text-stroke-width: 1px;
+
+  text-shadow: 
+    3px 3px 0 #000,
+    -3px 3px 0 #000, 
+    3px -3px 0 #000, 
+    -3px -3px 0 #000; 
+  */
 }
