--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@
 
   color: var(--black-color-1);
 
-  background-color: var(--white-color-1);
+  background-color: var(--black-color-1);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
