--- a/src/components/DialogueBox/styles.module.css
+++ b/src/components/DialogueBox/styles.module.css
@@ -1,4 +1,6 @@
 .dialogue-box {
+  z-index: 10;
+
   width: 60%;
   height: 30vh;
   /* Fundo semi-transparente */
@@ -41,4 +43,48 @@
   padding-right: 40px;
 
   text-align: center;
+}
+
+.link {
+  font-weight: 100;
+  font-size: 12px;
+  text-decoration: none;
+
+  position: relative;
+  top: 35%;
+
+  padding: 10px;
+  border-radius: 10px;
+  cursor: pointer;
+
+  /* Adicionando transição suave */
+  transition: background-color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
+
+  /* Estilo padrão */
+  /* Verde, por exemplo */
+  background-color: white;
+  color: black;
+  border: none;
+
+  font-weight: bold;
+}
+
+.link:hover {
+  /* Mudança de cor ao passar o mouse */
+  /* Tom mais escuro de verde */
+  background-color: white; 
+  
+  /* Efeito de leve aumento */
+  transform: scale(1.05);
+
+  /* Sombra ao passar o mouse */
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
+}
+
+.link:active {
+  /* Efeito de clique */
+  transform: scale(0.95);
+
+  /* Mudança na cor do botão ao clicar */
+  background-color: white;
 }
